@@ -30,11 +30,15 @@ namespace WTR {
 
 static Ecore_Evas* initEcoreEvas()
 {
-    const char* engine = 0;
+    Ecore_Evas* ecoreEvas = 0;
 #if defined(WTF_USE_ACCELERATED_COMPOSITING) && defined(HAVE_ECORE_X)
-    engine = "opengl_x11";
+    const char* engine = "opengl_x11";
+    ecoreEvas = ecore_evas_new(engine, 0, 0, 800, 600, 0);
+    // Graceful fallback to software rendering if evas_gl engine is not available.
+    if (!ecoreEvas)
 #endif
-    Ecore_Evas* ecoreEvas = ecore_evas_new(engine, 0, 0, 800, 600, 0);
+    ecoreEvas = ecore_evas_new(0, 0, 0, 800, 600, 0);
+
     if (!ecoreEvas)
         return 0;
 
